@@ -64,6 +64,7 @@ following names for their contribution to the product.
 * FunPika
 * Happy-melon
 * Jeremy Baron
+* Jidanni
 * Juliano F. Ravasi
 * Lucas Garczewski
 * Louperivois
